--- a/client/widgets/lineChart/src/view/view.html
+++ b/client/widgets/lineChart/src/view/view.html
@@ -2,7 +2,7 @@
   <div ng-hide="graph.label" class="alert alert-info" role="alert">
     Please insert a url to the widget configuration
   </div>
-  <div ng-show="graph.label && !graph.load">
+  <div ng-show="graph.label">
     <div>
       <canvas id="graph" class="chart-base" chart-type="graph.type" chart-data="graph.value" chart-labels="graph.label" chart-series="graph.series" chart-options="graph.options" chart-colors="graph.color">
       </canvas>
@@ -11,8 +11,11 @@
       <p class="text-center"> {{graph.desc}} </p>
     </div>
     <my-export chart=graph.chart></my-export>
+    <button type="button" class="btn btn-success" ng-csv="graph.getValue()" csv-header="graph.getLabel()" field-separator=";" filename="{{$parent.model.title + '.csv'}}">
+      <i class="fa fa-file-excel-o" aria-hidden="true"></i>
+    </button>
   </div>
-  <div ng-show="graph.load">
+  <!-- <div ng-show="graph.load">
     <div ng-include="'/templates/directive/loader.html'">
-  </div>
+  </div> -->
 </div>
