--- a/client/widgets/pieChart/src/view/view.html
+++ b/client/widgets/pieChart/src/view/view.html
@@ -1,8 +1,8 @@
 <div>
-  <div ng-hide="graph.label" class="alert alert-info" role="alert">
+  <div ng-hide="graph.series" class="alert alert-info" role="alert">
     Please insert a url to the widget configuration
   </div>
-  <div ng-show="graph.label">
+  <div ng-show="graph.series">
     <div>
       <div id="{{graph.id}}" ng-class="{click : graph.config.mode == 'std'}">
       </div>
@@ -10,8 +10,13 @@
     <div>
       <p class="text-center"> {{graph.desc}} </p>
     </div>
-    <my-export chart=graph.chart></my-export>
-    <button type="button" class="btn btn-success" ng-csv="graph.value" csv-header="graph.label" field-separator=";" filename="{{$parent.model.title + '.csv'}}">
+    <!-- <my-export chart=graph.chart></my-export> -->
+    <a ng-click=graph.export($event)>
+      <button type="button" class="btn btn-info" >
+        <i class="fa fa-file-excel-o" aria-hidden="true"></i>
+      </button>
+    </a>
+    <button type="button" class="btn btn-success" ng-csv="graph.series" field-separator=";" filename="{{$parent.model.title + '.csv'}}">
       <i class="fa fa-file-excel-o" aria-hidden="true"></i>
     </button>
   </div>
