--- a/client/widgets/graphCacti/src/view/view.html
+++ b/client/widgets/graphCacti/src/view/view.html
@@ -7,7 +7,7 @@
       <select ng-options="time in graph.listTime" ng-model=graph.timeUnit> </select>
     </div>
     <div>
-      <img ng-src="{{graph.url}}"></img>
+      <img ng-if="graph.url" ng-src="{{graph.url}}" class="img-responsive" draggable="false" ondragstart="return false"></img>
     </div>
     <div>
       <p class="text-center"> {{graph.desc}} </p>
