--- a/client/widgets/gaugeChart/src/view/view.html
+++ b/client/widgets/gaugeChart/src/view/view.html
@@ -5,10 +5,10 @@
   <div ng-show="graph.value">
     <div class="text-center">
       <ng-gauge type="{{graph.config.type}}" thick="5" value="graph.value" cap="round" label="{{graph.label}}" append="{{graph.config.append}}" min="graph.config.min" max="graph.config.max"
-      foreground-color="{{graph.config.colorFg}}" background-color="{{graph.config.colorBg}}" thresholds="graph.seuil" ng-click="graph.open()" ng-class="{click : graph.config.master}"></ng-gauge>
+      foreground-color="{{graph.config.colorFg}}" background-color="{{graph.config.colorBg}}" thresholds="graph.seuil" ng-click="graph.open()" ng-class="{click : graph.config.master || graph.config.modal}" ng-click=graph.open()></ng-gauge>
     </div>
     <div class="text-center">
-      <span ng-if="graph.valDetail"> {{graph.valDetail}} / {{graph.maxDetail}} </span>
+      <!-- <span ng-if="graph.valDetail"> {{graph.valDetail}} / {{graph.maxDetail}} </span> -->
       <p> {{graph.config.desc}} </p>
     </div>
     <!-- <a type=button ng-click="graph.export($event)"> <button type="button" class="btn btn-info" ><i class="fa fa-file-image-o" aria-hidden="true"></i> Export</button> </a> -->
