--- a/client/templates/directive/modalConfig.html
+++ b/client/templates/directive/modalConfig.html
@@ -25,7 +25,7 @@
     </div>
     <div class="form-group">
       <label class="ctm-label" for="modalPath-{{$index}}" data-placeholder="Path">Chemin d'accès</label>
-      <input type="text" id="modalPath-{{$index}}" class="form-control" placeholder="Path" ng-model="modalCol.path" required="">
+      <input type="text" id="modalPath-{{$index}}" class="form-control" placeholder="Path" ng-model="modalCol.path" required=""  autocomplete="off" uib-typeahead="key for key in config.keys"  typeahead-min-length='0'>
     </div>
     <br>
     <button type="button" class="btn btn-warning" ng-click="removeColumn($index)">
