--- a/client/widgets/paginateTable/src/view/view.html
+++ b/client/widgets/paginateTable/src/view/view.html
@@ -26,7 +26,7 @@
             {{head}}
           </th>
         </tr>
-        <tr ng-repeat="row in filterData = (pt.data.rows | filter:q | orderBy:pt.sorter:pt.reverseSort) | startFrom: (pt.data.currentPage-1)*pt.data.itemPerPage | limitTo:pt.data.itemPerPage track by $index" ng-click="pt.open(row)">
+        <tr ng-repeat="row in filterData = (pt.data.rows | myfilter:pt.data.headers:q | orderBy:pt.sorter:pt.reverseSort) | startFrom: (pt.data.currentPage-1)*pt.data.itemPerPage | limitTo:pt.data.itemPerPage track by $index" ng-click="pt.open(row)">
           <td ng-repeat="col in row track by $index" ng-switch="col.opt.type" ng-if="col.opt != 'hidden'" ng-class="{click : pt.data.config.master || pt.data.config.modalUrl}">
             <span ng-switch-default> {{col.value}} </span>
 
@@ -47,6 +47,9 @@
             <!-- Check -->
             <span ng-switch-when="check" ng-if="col.value > 0"> <i class="fa fa-times text-danger" uib-tooltip="{{col.value}}"> </span>
             <span ng-switch-when="check" ng-if="col.value == 0"> <i class="fa fa-check text-success"uib-tooltip="{{col.value}}"> </span>
+
+            <!-- Date -->
+            <span ng-switch-when="date"> {{pt.formatDate(col.value, col.opt.dateFormat)}} </span>
 
           </td>
         </tr>
